# MinsC2Rust

./: .gitignore  .gitmodules  Dockerfile  README.md  README_en_v1.md  analyzer_config copy.yaml  analyzer_config.yaml  c_project_analysis.json  c_project_analyzer.py  c_project_reconstructor.py  chown.sh  clean.sh  clear_rs.py  config  config_c_algorithm.yaml  config_translate_chibicc.yaml  element_translation.py  fill_unimplemented.py  metrics.py  requirements.txt  run.sh  run_docker.sh  test.py  test.sh
analysis/: correctness.csv  correctness.py  fix_module_comparison.csv  fix_module_comparison.py  impact_of_iterations.py  impact_of_llms.py  safety.csv  safety.py  statistics_of_programs.csv  statistics_of_programs.py
analyzer/: .gitignore  __init__.py  analyzer.py  build_rust_skeleton.py  c_project_analyzer.py  c_project_reconstructor.py  config.py  demo_visualization.py  dependency_visualizer.py  requirements.txt  symbol_batching.py  symbol_dependency_analyzer.py  symbol_model.py  test.sh  topo_sort_dependencies.py
analyzer/tests/: test.py  test_binn_dependencies.py  test_function_dependencies.py  test_macro_dependencies.py  test_runner.py  test_scope_analysis.py  test_symbols.py  test_type_dependencies.py  test_unified_analyzer.py
benchmarks/c-algorithm/: CMakeLists.txt
benchmarks/crown/: .gitignore
benchmarks/crown/Input/: CMakeLists.txt
benchmarks/crown/Input/output/: Cargo.toml  lib.rs
benchmarks/crown/Input/output/src/src/: binn.rs  bst.rs  buffer.rs  ht.rs  lil.rs  quadtree.rs  urlparser.rs
benchmarks/crown/Input/output/src/test/: test_bst.rs  test_buffer.rs  test_ht.rs  test_quadtree.rs  test_rgba.rs  test_urlparser.rs
benchmarks/crown/Input/src/: binn.c  binn.h  bst.h  quadtree.c  urlparser.c
benchmarks/crown/Input/test/: test-binn.c  test-lil.c  test-rgba.c  test-urlparser.c
benchmarks/crown/heman/: .gitignore  CMakeLists.txt  test_earth
benchmarks/crown/heman/Output/Output/: all_error_funcs_content.json  checkpoint.json  once_retry_count_dict.json  results.json
benchmarks/crown/heman/Output/tmp/src/: aabb2.c  aabb3.c  color.c  distance.c  draw.c  export.c  gaussian.c  generate.c  image.c  import.c  lighting.c  mat3.c  mat4.c  noise.c  ops.c  plane.c  points.c  quaternion.c  ray2.c  ray3.c  utility.c  vec2.c  vec3.c  vec4.c
benchmarks/crown/heman/Output/tmp/src_json/: color.json  distance.json  draw.json  export.json  gaussian.json  generate.json  image.json  import.json  lighting.json  noise.json  ops.json  points.json
benchmarks/crown/heman/Output/tmp/test/: test-earth.c  test-heman.c  test-planet.c  test-pts.c  test-sdf.c
benchmarks/crown/heman/Output/tmp/test-heman_test_distance/: definitions.json  processed_file.rs  temp.rs  test_source.rs
benchmarks/crown/heman/Output/tmp/test_json/: test-earth.json  test-heman.json  test-planet.json  test-pts.json  test-sdf.json
benchmarks/crown/heman/test/: hut.h  test-earth.c  test-heman.c  test-planet.c  test-pts.c  test-sdf.c
benchmarks/test/: CMakeLists.txt  README.md
benchmarks/test/include/: common.h
benchmarks/test/src/: main.c
benchmarks/test/src/module_a/: shared.c
benchmarks/test/src/module_b/: shared.c
c-algorithm/src/: arraylist.c  arraylist.h  avl-tree.c  avl-tree.h  binary-heap.c  binary-heap.h  binomial-heap.c  binomial-heap.h  bloom-filter.c  bloom-filter.h  compare-int.c  compare-int.h  compare-pointer.c  compare-pointer.h  compare-string.c  compare-string.h  hash-int.c  hash-int.h  hash-pointer.c  hash-pointer.h  hash-string.c  hash-string.h  hash-table.c  hash-table.h  list.c  list.h  queue.c  queue.h  rb-tree.c  rb-tree.h  set.c  set.h  slist.c  slist.h  sortedarray.c  sortedarray.h  tinyexpr.c  tinyexpr.h  trie.c  trie.h  (+2 more)
c-algorithm/test/: alloc-testing.c  alloc-testing.h  framework.c  framework.h  test-set.c  (+17 more)
configs/: config_c_algorithm.yaml  config_translate_littlefs_fuse.yaml
data/: c_to_rust_type_mapping.csv  success_experience.csv
llm/: .gitignore  1.patch  2.patch  ENV.py  README.md  agent.py  llm.py  mcp_client.py  memory.py  pyproject.toml  rag.py  read_file.py  requirements.txt  swe_agent.py  tool_call.py
llm/demo/: .gitignore  demo_mcp_client.py  demo_swe_agent_fix_bug.py  demo_swe_agent_proj_understand.py  demo_swe_agent_usage.py  test_mcp_transports.py
llm/demo/c-algorithm/: CMakeLists.txt
llm/demo/c-algorithm/src/: arraylist.c  tinyexpr.c
llm/scripts/: pytest.sh
llm/template_parser/: template_parser.py
llm/tests/: test_agent.py  test_agent_mcp.py  test_llm.py  test_mcp_integration.py  test_memory.py  test_swe_agent.py  test_swe_agent_llm.py  test_table_parser.py  test_table_parser_llm.py  test_template_parser.py  test_template_parser_llm.py  test_tool_call.py
llm/utils/: call_snippet.py  call_snippet_osmosis.py  code_merge.py
rust_ast_project/: Cargo.toml
symbol_dependency_analysis/: README.md  VISUALIZATION_GUIDE.md  demo_visualization.py  dependency_visualizer.py  requirements.txt  symbol_dependencies.json  symbol_dependency_analyzer.py
tests/: test_memory.py
(+297 files in other folders)
